--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
 
 
     <script>
-        posicaoRandomica()
+
+
+        setInterval(function () {
+            posicaoRandomica()
+
+
+        }, 1000)
+
+        
     </script>
 
-    
+
 </body>
 
 </html>
