--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 
 
 <body onresize="ajustaTamanhoPalcoJogo()">
+    
+    <div class="painel">
+        <div class="vidas">
+            <img src="imagens/coracao_vazio.png" />
+            <img src="imagens/coracao_cheio.png" />
+            <img src="imagens/coracao_cheio.png" />
+        </div>
 
+        <div class="cronometro">Tempo restante: ?</div>
+    </div>
 
 
     <script>
@@ -24,7 +33,7 @@
 
         }, 1000)
 
-        
+
     </script>
 
 
