--- a/index.html
+++ b/index.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
+	<head>
+		<title></title>
+		<meta charset="UTF-8" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>Game Mata Mosquito</title>
-</head>
+		<link rel="stylesheet" href="estilo.css" />
+
+		<script>
+			function iniciarJogo() {
+				var nivel = document.getElementById('nivel').value
+
+				if(nivel === '') {
+					alert('Selecione um nível para iniciar o jogo')
+					return false
+				}
+
+				window.location.href = "app.html?" + nivel
+
+			}
+		</script>
+	</head>
+	<body>
+
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="d-flex justify-content-center">
+						<img src="imagens/game.png" />
+					</div>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col">
+					<div class="d-flex justify-content-center">
+						<div class="mb-2">
+							<select class="form-control" id="nivel">
+								<option value="">-- Selecione o nível --</option>
+								<option value="normal">Normal</option>
+								<option value="dificil">Difícil</option>
+								<option value="chucknorris">Chuck Norris</option>
+							</select>
+						</div>
+					</div>
+				</div>
+			</div>
 
 
-<body onresize="ajustaTamanhoPalcoJogo()">
+			<div class="row">
+				<div class="col">
+					<div class="d-flex justify-content-center">
+						<button type="button" class="btn btn-danger btn-lg" onclick="iniciarJogo()" >Iniciar Jogo</button>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    <div class="painel">
-        <div class="vidas">
-            <img id="v1" src="imagens/coracao_cheio.png" />
-            <img id="v2" src="imagens/coracao_cheio.png" />
-            <img id="v3" src="imagens/coracao_cheio.png" />
-        </div>
-
-        <div class="cronometro">Tempo restante: ?</div>
-    </div>
-
-
-    <script>
-
-
-        setInterval(function () {
-            posicaoRandomica()
-
-
-        }, 1000)
-
-
-    </script>
-
-
-</body>
-
+	</body>
 </html>
